--- a/css/global.css
+++ b/css/global.css
@@ -24,6 +24,7 @@ nav {
     align-items: center;
     padding: 10px 0px 0px 20px; /* Up right down left */
     background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 .navbar-logo {
     height: 60px;
