--- a/css/index.css
+++ b/css/index.css
@@ -1,100 +1,55 @@
-main {
-    padding: 40px;
+* {
+    box-sizing: border-box;
 }
 
-.intro-container {
-    display: flex;
-    align-items: center;
-    margin-bottom: 100px;
-}
-
-.intro-text {
-    margin-left: 50px;
-}
-
-.role-detail {
-    text-align: left;
-    font-size: 20px;
-    margin-top: 10px;
-    font-family: 'Source Sans 3', sans-serif;
-    color: #54585a;
-}
-
-/* Categories Section */
-.categories-section {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-    margin-left: calc(50% - 50vw);
-    width: 100vw;
-    padding: 40px;
-    background-color: #f0f0f0;
-}
-.category {
-    background-color: #ffffff;
-    padding: 20px;
-    border-radius: 10px;
-    text-align: center;
-    font-size: 18px;
-    font-family: 'Quicksand', sans-serif;
-    font-weight: bold;
-    color: #333333;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-h2 {
-    text-align: center;
-    font-size: 30px;
-    margin-top: 20px;
-    font-family: 'Source Sans 3', sans-serif;
-}
-
-/* Sponsors Section */
-.sponsors-section {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-    margin-left: calc(50% - 50vw);
-    width: 100vw;
-    padding: 40px;
-}
-.sponsor {
+body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #ffffff;
-    padding: 20px;
-    border-radius: 10px;
-    height: 400px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-.sponsor img {
-    max-width: 100%;
-    height: auto;
+    height: 100vh;
+    margin: 0;
+    font-family: Arial, sans-serif;
+    flex-direction: column;
 }
 
-@media screen and (max-width: 768px) {
-    main {
-        padding: 0px 0px;
-    }
-    body {
-        padding: 0;
-    }
-    .intro-text {
-        margin-left: 0px;
-    }
-    .intro-container {
-        flex-direction: column;
-        margin-right: 50px;
-        margin-left: 50px;
-        margin-bottom: 80px;
-    }
-    .header {
-        font-size: 44px;
-        margin-left: 0px;
-        margin-bottom: 5px;
-    }
-    .categories-section, .sponsors-section {
-        grid-template-columns: 1fr;
-    }
+.title {
+    font-size: 2em;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    color: #FF1493;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-grow: 1;
+}
+
+.button-row {
+    margin: 10px 0;
+}
+
+.btn {
+    width: 400px;
+    height: 100px;
+    padding: 10px 20px;
+    font-size: 18px;
+    cursor: pointer;
+    border: none;
+    background-color: #008080;
+    color: white;
+    border-radius: 25px;
+    transition: background-color 0.3s;
+}
+
+.btn:hover {
+    background-color: #FF69B4;
+}
+
+.footer {
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    color: #008080;
 }
